test/files/pos/super/Super_2.scala
object Test {
  val x: Super = null

  def main(args: Array[String]) {
  }
}
